get the homepage layout up and ready

--- a/application.html
+++ b/application.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="application.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Yelp Camp</title>
 </head>
 <body>
-    <h1>Welcome to YelpCamp!</h1>
-    <button id="view_campgrounds">View All Campgrounds</button>
-
+    <div>
+        <h3>Welcome to YelpCamp!</h3>
+        <button class="btn btn-success" id="view_campgrounds">View All Campgrounds</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
