--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <style></style>
   </head>
   <body>
+    <div id="like_button_container"></div>
     <div style="position: relative">
       <div style="position: absolute" id="slideset">
         <div>
@@ -26,11 +27,26 @@
       </div>
       <div id="texts">
         <h3>Welcome to YelpCamp!</h3>
-        <button class="btn btn-success" id="view_campgrounds">
+        <a class="btn btn-success" id="view_campgrounds" href="/campgrounds">
           View All Campgrounds
-        </button>
+        </a>
       </div>
     </div>
-    <script src="index.js"></script>
+
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <!-- <script
+      src="https://unpkg.com/react@17/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+      crossorigin
+    ></script> -->
+
+    <!-- Load our React component. -->
+    <!-- <script src="like_button.js"></script> -->
+    <div id="root"></div>
+    <script src="bundle.js"></script>
   </body>
 </html>
