refine folder structure and file names

--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="application.css" />
+
+    <title>Personal YelpCamp</title>
+
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <title>Personal YelpCamp</title>
+
     <style></style>
   </head>
   <body>
     <div id="like_button_container"></div>
     <div style="position: relative">
       <div style="position: absolute" id="slideset">
-        <div>
-          <img src="assets/cloudy.jpg" alt="cloudy" />
-        </div>
-        <div>
-          <img src="assets/dog.jpg" alt="dog" />
-        </div>
-        <div>
-          <img src="assets/sunflower.jpg" alt="sunflower" />
-        </div>
+        <img src="images/cloudy.jpg" alt="cloudy" />
+        <img src="images/dog.jpg" alt="dog" />
+        <img src="images/sunflower.jpg" alt="sunflower" />
+        <img src="http://i.imgur.com/K3mPv14.jpg" alt="mountains" />
       </div>
       <div id="texts">
         <h3>Welcome to YelpCamp!</h3>
