--- a/public/campgrounds.html
+++ b/public/campgrounds.html
@@ -9,8 +9,11 @@
     />
     <title>Campgrounds</title>
     <style>
-      #btn_login {
-        float: right;
+      body {
+        background-color:rgb(250,240,200);
+      }
+      .container > div{
+        background-color: #F0F0F0;
       }
     </style>
   </head>
@@ -18,25 +21,23 @@
     <nav class="navbar bg-light">
       <div class="container">
         <a class="navbar-brand" href="/application.html">
-          <img width="100sp" src="../assets/yelp_camp_logo.jpg" alt="Site Logo" />
+          <img width="100sp" src="images/yelp_camp_logo.jpg" alt="Site Logo" />
         </a>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" id="btn_login" href="./login.html">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./register.html">Register</a>
-          </li>
-        </ul>
+        <div class="">
+          <a class="m-3" href="./login.html">Login</a>
+          <a class="m-3" href="./register.html">Sign Up</a>
+        </div>
       </div>
     </nav>
+
     <div class="container">
-      <div class="bg-success p-4 m-4">
+      <div class="p-4 my-4">
         <h1>Welcome to Campgrounds</h1>
         <button class="btn btn-primary">Add New Campground</button>
       </div>
-      <div class="">
-        <img width="300" src="../assets/best_beach.jpg" alt="Beach Pic" />
+
+      <div class="bg-success">
+        <img width="300" src="images/best_beach.jpg" alt="Beach Pic" />
         <h4 id="header">Rodeoe Beach</h4>
         <button class="btn btn-primary">More Info</button>
       </div>
