add npm all to integrage webpack and nodemon

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Personal YelpCamp</title>
+    <title>Adarsh Products</title>
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
 
@@ -25,27 +25,16 @@
         <img src="http://i.imgur.com/K3mPv14.jpg" alt="mountains" />
       </div>
       <div id="texts">
-        <h3>Welcome to YelpCamp!</h3>
+        <h3>Welcome to Adarsh!</h3>
         <a class="btn btn-success" id="view_campgrounds" href="/campgrounds">
-          View All Campgrounds
+          View All Products
         </a>
       </div>
     </div>
 
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <!-- <script
-      src="https://unpkg.com/react@17/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-      crossorigin
-    ></script> -->
-
-    <!-- Load our React component. -->
-    <!-- <script src="like_button.js"></script> -->
     <div id="root"></div>
+
+    <!-- We need the following script for webpack to render React -->
     <script src="bundle.js"></script>
   </body>
 </html>
