--- a/client/public/app.html
+++ b/client/public/app.html
@@ -6,7 +6,7 @@
 
     <title>Adarsh Products</title>
 
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/app.css" />
 
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
     <style></style>
   </head>
   <body>
-    <div id="like_button_container"></div>
+
     <div style="position: relative">
       <div style="position: absolute" id="slideset">
         <img src="images/cloudy.jpg" alt="cloudy" />
@@ -25,15 +25,13 @@
         <img src="http://i.imgur.com/K3mPv14.jpg" alt="mountains" />
       </div>
       <div id="texts">
+        <div id="like_button_container"></div>
         <h3>Welcome to Adarsh!</h3>
-        <a class="btn btn-success" id="view_campgrounds" href="/campgrounds">
+        <a class="btn btn-success" id="view_campgrounds" href="/products">
           View All Products
         </a>
       </div>
     </div>
-
-    <div id="root"></div>
-
     <!-- We need the following script for webpack to render React -->
     <script src="bundle.js"></script>
   </body>
