--- a/client/public/register.html
+++ b/client/public/register.html
@@ -3,29 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Register</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <style>
-        form {
-            margin: 30px;
-        }
+      form {
+        margin: 30px;
+      }
     </style>
   </head>
   <body>
-    <form action="/login" method="POST">
-      <input placeholder="Username" type="text" name="username" required/>
-      <input placeholder="Password" type="password" name="password" required/>
-      <!-- <div class="form-group">
+    <form action="/register" method="POST">
+      <h1>User Registration</h1>
+      <div class="form-group">
           <label for="username">Username</label>
         <input placeholder="Username" type="text" name="username" required/>
       </div>
       <div class="form-group">
           <label for="password">Password</label>
         <input placeholder="Password" type="password" name="password" required/>
-      </div> -->
+      </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
