style the new product page with bootstrap

--- a/client/public/new_product.html
+++ b/client/public/new_product.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Product</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
 </head>
 <body>
-    <h1>H</h1>
+    <h1>New Product</h1>
     <div id="new_product_container"></div>
     <!-- We need the following script for webpack to render React -->
     <script src="../bundle.js"></script>
