take the adarsh products display section to a new react component

--- a/client/public/products.html
+++ b/client/public/products.html
@@ -36,11 +36,7 @@
         <button class="btn btn-primary" onclick="window.location='/products/new'">Add New Product</button>
       </div>
 
-      <div class="bg-success">
-        <img width="300" src="images/best_beach.jpg" alt="Beach Pic" />
-        <h4 id="header">Rodeoe Beach</h4>
-        <button class="btn btn-primary">More Info</button>
-      </div>
+      <div id="all_products"></div>
     </div>
     <!-- We need the following script for webpack to render React -->
     <script src="bundle.js"></script>
