create products table when calling products endpoint and add transition effect to images in root page

--- a/client/public/app.html
+++ b/client/public/app.html
@@ -16,14 +16,14 @@
     <style></style>
   </head>
   <body>
-
-    <div style="position: relative">
-      <div style="position: absolute" id="slideset">
-        <img src="images/cloudy.jpg" alt="cloudy" />
-        <img src="images/dog.jpg" alt="dog" />
-        <img src="images/sunflower.jpg" alt="sunflower" />
-        <img src="http://i.imgur.com/K3mPv14.jpg" alt="mountains" />
-      </div>
+    <div>
+      <ul class="slideset">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
       <div id="texts">
         <div id="like_button_container"></div>
         <h3>Welcome to Adarsh!</h3>
