add form control to register page

--- a/client/public/register.html
+++ b/client/public/register.html
@@ -16,14 +16,14 @@
   </head>
   <body>
     <form action="/register" method="POST">
-      <h1>User Registration</h1>
+      <h1 class="text-center">User Registration</h1>
       <div class="form-group">
           <label for="username">Username</label>
-        <input placeholder="Username" type="text" name="username" required/>
+        <input class="form-control" placeholder="Username" type="text" name="username" required/>
       </div>
       <div class="form-group">
           <label for="password">Password</label>
-        <input placeholder="Password" type="password" name="password" required/>
+        <input class="form-control" placeholder="Password" type="password" name="password" required/>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Submit</button>
