--- a/client/public/all_products.html
+++ b/client/public/all_products.html
@@ -13,6 +13,7 @@
         background-color:rgb(250,240,200);
       }
       .container > div{
+        border-radius: 20px;
         background-color: #F0F0F0;
       }
     </style>
@@ -31,9 +32,9 @@
     </nav>
 
     <div class="container">
-      <div class="p-4 my-4">
-        <div id="root"></div>
-        <button class="btn btn-primary" onclick="window.location='/products/new'">Add New Product</button>
+      <div class="p-5 my-4">
+        <h1>Welcome to Adarsh Products!</h1>
+        <button class="btn btn-primary mt-3" onclick="window.location='/products/new'">Add New Product</button>
       </div>
 
       <div id="all_products"></div>
