make the images responsive

--- a/client/public/all_products.html
+++ b/client/public/all_products.html
@@ -22,7 +22,7 @@
     <nav class="navbar bg-light">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <img width="100sp" src="images/yelp_camp_logo.jpg" alt="Site Logo" />
+          <img width="100sp" class="img-fluid" src="images/yelp_camp_logo.jpg" alt="Site Logo" />
         </a>
         <div class="">
           <a class="m-3" href="/login">Login</a>
