add the classes which improve UI for the product's edit form

--- a/client/public/edit_product.html
+++ b/client/public/edit_product.html
@@ -10,8 +10,8 @@
     <title>Edit Product</title>
     
 </head>
-<body>
-    <h1>Edit Form</h1>
+<body class="m-4">
+    <h1 class="text-center m-3">Edit Form</h1>
     <div id="edit_product_container"></div>
     <script src="../../bundle.js"></script>
 </body>
