remove underscores and add hyphen to id names

--- a/client/public/all_products.html
+++ b/client/public/all_products.html
@@ -37,7 +37,7 @@
         <button class="btn btn-primary mt-3" onclick="window.location='/products/new'">Add New Product</button>
       </div>
 
-      <div id="all_products"></div>
+      <div id="all-products"></div>
     </div>
     <!-- We need the following script for webpack to render React -->
     <script src="bundle.js"></script>
