--- a/client/public/app.html
+++ b/client/public/app.html
@@ -25,7 +25,7 @@
         <li></li>
       </ul>
       <div id="texts">
-        <div id="like_button_container"></div>
+        <div id="like-button-container"></div>
         <h3>Welcome to Adarsh!</h3>
         <a class="btn btn-success" id="view_campgrounds" href="/products">
           View All Products
