--- a/client/public/new_product.html
+++ b/client/public/new_product.html
@@ -10,7 +10,7 @@
     />
 </head>
 <body>
-    <div id="new_product_container"></div>
+    <div id="new-product-container"></div>
     <!-- We need the following script for webpack to render React -->
     <script src="../bundle.js"></script>
 </body>
