--- a/client/public/edit_product.html
+++ b/client/public/edit_product.html
@@ -12,7 +12,7 @@
 </head>
 <body class="m-4">
     <h1 class="text-center m-3">Edit Form</h1>
-    <div id="edit_product_container"></div>
+    <div id="edit-product-container"></div>
     <script src="../../bundle.js"></script>
 </body>
 </html>
