--- a/client/public/all_users.html
+++ b/client/public/all_users.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <title>All Users</title>
-</head>
-<body>
-    <h1>HTML</h1>
+  </head>
+  <body>
     <div id="all-users"></div>
     <!-- We need the following script for webpack to render React -->
     <script src="bundle.js"></script>
-</body>
+  </body>
 </html>
