--- a/client/public/all_products.html
+++ b/client/public/all_products.html
@@ -19,17 +19,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="/">
-          <img width="100sp" class="img-fluid" src="images/yelp_camp_logo.jpg" alt="Site Logo" />
-        </a>
-        <div class="">
-          <a class="m-3" href="/login">Login</a>
-          <a class="m-3" href="/register">Sign Up</a>
-        </div>
-      </div>
-    </nav>
+    <div id="root"></div>
 
     <div class="container">
       <div class="p-5 my-4">
