fix the like button on the landing page

--- a/client/public/app.html
+++ b/client/public/app.html
@@ -25,11 +25,13 @@
         <li></li>
       </ul>
       <div id="texts">
-        <div id="like_button_container"></div>
         <h3>Welcome to Adarsh!</h3>
-        <a class="btn btn-success" id="view_campgrounds" href="/products">
-          View All Products
-        </a>
+        <div class="d-flex">
+          <a class="btn btn-success" id="view_campgrounds" href="/products">
+            View All Products
+          </a>
+          <div class="text-center mt-3" id="like_button_container"></div>
+        </div>
       </div>
     </div>
     <!-- We need the following script for webpack to render React -->
