fix the button styling on the all products page

--- a/client/public/all_products.html
+++ b/client/public/all_products.html
@@ -12,7 +12,7 @@
       body {
         background-color:rgb(250,240,200);
       }
-      .container > div:nth-child(2){
+      #banner{
         border-radius: 20px;
         background-color: #F0F0F0;
       }
