add live reload on browser feature

--- a/client/public/all_products.html
+++ b/client/public/all_products.html
@@ -23,5 +23,6 @@
     <div id="all_products"></div>
     <!-- We need the following script for webpack to render React -->
     <script src="bundle.js"></script>
+    <script src="/reload/reload.js"></script>
   </body>
 </html>
